<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <PreferenceCategory
        android:title="@string/preference_ros_core">

        <EditTextPreference
            android:key="@string/option_master_uri_key"
            android:title="@string/option_master_uri_title"
            android:summary="@string/option_master_uri_summary"
            android:defaultValue="@string/option_master_uri_default_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_remote_control_mode">

        <ListPreference
            android:key="@string/option_remote_control_mode_key"
            android:title="@string/option_remote_control_mode_title"
            android:summary="@string/option_remote_control_mode_summary"
            android:dialogTitle="@string/option_remote_control_mode_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </PreferenceCategory>


</PreferenceScreen>
